--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
   "content_scripts": [
 	{
 		"matches": ["https://*.visualstudio.com/*"],
-		"css": [],
+		"css": ["content.css"],
 		"js": ["content.js"],
 		"run_at": "document_end"
 	}
